Разметка на автоматическую проверку

--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,8 @@
 
   <body>
     <div class="page-contanier">
-      <header class="main-header">
-        <img class="header-logo-image" src="" alt="Логотип города Седона «City of Sedona»." width="139"
-          height="70">
+      <шапка data-test="header" class="main-header">
+        <img class="header-logo-image" src="" alt="Логотип города Седона «City of Sedona»." width="139" height="70">
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -40,11 +39,11 @@
           </ul>
         </nav>
 
-      </header>
+      </шапка>
 
 
-      <main class="main-container main-inner">
-        <div class="filter">
+      <основное-содержание data-test="main" class="main-container main-inner">
+        <блок-фильтр data-test="div" class="filter">
           <header class="inner-header">
             <h1 class="inner-header-tittle">Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
@@ -112,8 +111,8 @@
               <button class="button-reset" type="reset">Сбросить</button>
             </div>
           </form>
-        </div>
-        <section class="catalog">
+        </блок-фильтр>
+        <блок-каталог data-test="section" class="catalog">
           <div class="hotel-sort">
             <h2 class="hotel-sort-title">Найдено гостиниц:38</h2>
 
@@ -138,8 +137,7 @@
           <ul class="product-list">
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211"
-                alt="Amara Resort & Spa.">
+              <img class="product-card-image" src="" width="300" height="211" alt="Amara Resort & Spa.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -163,8 +161,7 @@
 
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211"
-                alt="Villas at Poco Diablo.">
+              <img class="product-card-image" src="" width="300" height="211" alt="Villas at Poco Diablo.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -188,8 +185,7 @@
 
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211"
-                alt="Desert Quail Inn.">
+              <img class="product-card-image" src="" width="300" height="211" alt="Desert Quail Inn.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -212,8 +208,7 @@
 
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211"
-                alt="GreenTree Inn.">
+              <img class="product-card-image" src="" width="300" height="211" alt="GreenTree Inn.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -260,9 +255,9 @@
               <option value="four">4</option>
             </select>
           </div>
-        </section>
+        </блок-каталог>
 
-        <div class="subscribe">
+        <блок-подписки data-test="div" class="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description">Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/">
@@ -270,11 +265,11 @@
             <input class="field" placeholder="Ваш e-mail" type="email" name="useremail" id="useremail" required>
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
-        </div>
-      </main>
+        </блок-подписки>
+      </основное-содержание>
 
 
-      <footer class="page-footer">
+      <подвал data-test="footer" class="page-footer">
         <div class="page-footer-container">
           <section class="footer-social">
             <h2 class="visually-hidden">Соцсети</h2>
@@ -304,11 +299,11 @@
 
           <section class="footer-logo">
             <h2 class="visually-hidden">html academy</h2>
-            <a href="https://htmlacademy.ru/"><img class="footer-logo-image" src=""
-                height="33" width="115" alt="Логотип html academy."></a>
+            <a href="https://htmlacademy.ru/"><img class="footer-logo-image" src="" height="33" width="115"
+                alt="Логотип html academy."></a>
           </section>
         </div>
-      </footer>
+      </подвал>
     </div>
   </body>
 
