--- a/catalog.html
+++ b/catalog.html
@@ -8,8 +8,8 @@
 
   <body>
     <div class="page-contanier">
-      <шапка data-test="header" class="main-header">
-        <img class="header-logo-image" src="" alt="Логотип города Седона «City of Sedona»." width="139" height="70">
+      <header class="main-header">
+        <img class="header-logo-image" src="images/logo.svg" alt="Логотип города Седона «City of Sedona»." width="139" height="70">
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -39,11 +39,11 @@
           </ul>
         </nav>
 
-      </шапка>
+      </header>
 
 
-      <основное-содержание data-test="main" class="main-container main-inner">
-        <блок-фильтр data-test="div" class="filter">
+      <main class="main-container main-inner">
+        <div class="filter">
           <header class="inner-header">
             <h1 class="inner-header-tittle">Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
@@ -111,8 +111,8 @@
               <button class="button-reset" type="reset">Сбросить</button>
             </div>
           </form>
-        </блок-фильтр>
-        <блок-каталог data-test="section" class="catalog">
+        </div>
+        <section class="catalog">
           <div class="hotel-sort">
             <h2 class="hotel-sort-title">Найдено гостиниц:38</h2>
 
@@ -137,7 +137,7 @@
           <ul class="product-list">
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211" alt="Amara Resort & Spa.">
+              <img class="product-card-image" src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Amara Resort & Spa.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -149,10 +149,10 @@
                   <a class="product-card-button detail" href="#">Подробнее</a>
                   <a class="product-card-button favorites" href="#">В избранное</a>
                   <div class="product-card-stars">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
                   </div>
                   <span class="product-card-rating">Рейтинг: 8,5</span>
                 </div>
@@ -161,7 +161,7 @@
 
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211" alt="Villas at Poco Diablo.">
+              <img class="product-card-image" src="images/hotels/hotel-2.jpg" width="300" height="211" alt="Villas at Poco Diablo.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -173,10 +173,10 @@
                   <a class="product-card-button detail" href="#">Подробнее</a>
                   <a class="product-card-button favorites" href="#">В избранное</a>
                   <div class="product-card-stars">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
                   </div>
                   <span class="product-card-rating">Рейтинг: 9,2</span>
                 </div>
@@ -185,7 +185,7 @@
 
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211" alt="Desert Quail Inn.">
+              <img class="product-card-image" src="images/hotels/hotel-3.jpg" width="300" height="211" alt="Desert Quail Inn.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -197,9 +197,9 @@
                   <a class="product-card-button detail" href="#">Подробнее</a>
                   <a class="product-card-button favorites" href="#">В избранное</a>
                   <div class="product-card-stars">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
                   </div>
                   <span class="product-card-rating">Рейтинг: 6,9</span>
                 </div>
@@ -208,7 +208,7 @@
 
             <li class="product-card">
 
-              <img class="product-card-image" src="" width="300" height="211" alt="GreenTree Inn.">
+              <img class="product-card-image" src="images/hotels/hotel-4.jpg" width="300" height="211" alt="GreenTree Inn.">
 
               <div class="product-card-content">
                 <a class="product-card-link" href="product.html">
@@ -220,8 +220,8 @@
                   <a class="product-card-button detail" href="#">Подробнее</a>
                   <a class="product-card-button favorites" href="#">В избранное</a>
                   <div class="product-card-stars">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
-                    <img class="product-card-star" src="" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
+                    <img class="product-card-star" src="images/star.svg" width="18" height="17" alt="Звезда.">
                   </div>
                   <span class="product-card-rating">Рейтинг: 5,0</span>
                 </div>
@@ -255,9 +255,9 @@
               <option value="four">4</option>
             </select>
           </div>
-        </блок-каталог>
+        </section>
 
-        <блок-подписки data-test="div" class="subscribe">
+        <div class="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description">Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/">
@@ -265,11 +265,11 @@
             <input class="field" placeholder="Ваш e-mail" type="email" name="useremail" id="useremail" required>
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
-        </блок-подписки>
-      </основное-содержание>
+        </div>
+      </main>
 
 
-      <подвал data-test="footer" class="page-footer">
+      <footer class="page-footer">
         <div class="page-footer-container">
           <section class="footer-social">
             <h2 class="visually-hidden">Соцсети</h2>
@@ -299,11 +299,11 @@
 
           <section class="footer-logo">
             <h2 class="visually-hidden">html academy</h2>
-            <a href="https://htmlacademy.ru/"><img class="footer-logo-image" src="" height="33" width="115"
+            <a href="https://htmlacademy.ru/"><img class="footer-logo-image" src="images/footer/html-academy-logo.svg" height="33" width="115"
                 alt="Логотип html academy."></a>
           </section>
         </div>
-      </подвал>
+      </footer>
     </div>
   </body>
 
