--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <body>
     <div class="page-contanier">
-      <шапка data-test="header" class="main-header">
-        <img class="header-logo-image" src="" alt="Логотип города Седона «City of Sedona»." width="139" height="70">
+      <header class="main-header">
+        <img class="header-logo-image" src="images/logo.svg" alt="Логотип города Седона «City of Sedona»." width="139" height="70">
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -39,18 +39,18 @@
           </ul>
         </nav>
         </header>
-      </шапка>
+      </header>
 
-      <основное-содержание data-test="main" class="main-container main-index">
+      <main class="main-container main-index">
         <h1 class="visually-hidden">Sedona</h1>
         <div class="promo">
-          <img class="promo-text-image" src="" width="458" height="352"
+          <img class="promo-text-image" src="images/promo.svg" width="458" height="352"
             alt="Промо «Welcome to the gargeous Sedona «Because the Grand Canyon sucks!»».">
         </div>
-        <блок-приемуществ data-test="article" class="advantages">
+        <article class="advantages">
           <header class="advantages-header">
             <h2 class="advantages-header-title">Седона — небольшой городок в Аризоне, <br> заслуживающий большего!</h2>
-            <p class="advantages-header-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+            <p class="advantages-header-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </header>
           <ol class="advantages-list">
             <li class="advantage-item">
@@ -58,7 +58,7 @@
                 <h3 class="advantage-title">Настоящий <br> городок</h3>
                 <p class="advantage-description">Седона — не аттракцион для <br> туристов, там течёт своя жизнь</p>
               </div>
-              <img class="advantage-image" src="" width="800" height="384" alt="Седона Сити.">
+              <img class="advantage-image" src="images/city-photo.jpg" width="800" height="384" alt="Седона Сити.">
 
             <li class="advantage-item">
               <div class="text-advantage">
@@ -86,23 +86,23 @@
                 <h3 class="advantage-title">Там есть <br> мост дьявола</h3>
                 <p class="advantage-description">Да, по нему можно пройти! <br> Если вы осмелитесь, <br> разумеется</p>
               </div>
-              <img class="advantage-image" src="" width="800" height="384" alt="Гранд-Каньон.">
+              <img class="advantage-image" src="images/grand-canyon-photo.jpg" width="800" height="384" alt="Гранд-Каньон.">
               <ul class="advantages-city">
                 <li class="advantage-item-icon-home">
-                  <img class="icon-home-image" src="" width="75" height="72" alt="Иконка жилье.">
+                  <img class="icon-home-image" src="images/house-icon.svg" width="75" height="72" alt="Иконка жилье.">
                   <h3 class="advantage-title">Жильё</h3>
                   <p class="advantage-description">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в кино!</p>
                 </li>
 
                 <li class="advantage-item-icon-food">
-                  <img class="icon-food-image" src="" width="74" height="70" alt="Иконка еда.">
+                  <img class="icon-food-image" src="images/food-icon.svg" width="74" height="70" alt="Иконка еда.">
                   <h3 class="advantage-title">Еда</h3>
                   <p class="advantage-description">Всегда заказывайте <br> топовый фирменный бургер, <br> вы не
                     разочаруетесь!</p>
                 </li>
 
                 <li class="advantage-item-icon-gift">
-                  <img class="icon-gift-image" src="" width="64" height="76" alt="Иконка сувениры.">
+                  <img class="icon-gift-image" src="images/gift-icon.svg" width="64" height="76" alt="Иконка сувениры.">
                   <h3 class="advantage-title">Сувениры</h3>
                   <p class="advantage-description">Не только китайского, <br> но и настоящего местного <br>
                     производства!
@@ -112,15 +112,15 @@
             </li>
 
           </ol>
-        </блок-приемуществ>
-        <блок-поиска data-test="div" class="search-hotel">
+        </article>
+        <div class="search-hotel">
           <h2 class="search-hotel-title">Заинтересовались?</h2>
           <p class="search-hotel-text">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
             гостиниц в Седоне</p>
           <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
-        </блок-поиска>
+        </div>
 
-        <блок-подписки data-test="div" class="subscribe">
+        <div class="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description">Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/">
@@ -128,10 +128,10 @@
             <input class="field" placeholder="Ваш e-mail" type="email" name="useremail" id="useremail" required>
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
-        </блок-подписки>
-      </основное-содержание>
+        </div>
+      </main>
 
-      <подвал data-test="footer" class="page-footer">
+      <footer class="page-footer">
         <div class="page-footer-container">
           <section class="footer-social">
             <h2 class="visually-hidden">Соцсети</h2>
@@ -161,11 +161,11 @@
 
           <section class="footer-logo">
             <h2 class="visually-hidden">html academy</h2>
-            <a href="https://htmlacademy.ru/"><img class="footer-logo-image" src="" width="115" height="33"
+            <a href="https://htmlacademy.ru/"><img class="footer-logo-image" src="images/footer/html-academy-logo.svg" width="115" height="33"
                 alt="Логотип html academy."></a>
           </section>
         </div>
-      </подвал>
+      </footer>
     </div>
   </body>
 
